--- a/notes/dml_lasso.tex
+++ b/notes/dml_lasso.tex
@@ -62,11 +62,24 @@ The Neyman Orthogonal moment for Poisson regression is then:
 
 How would we implement this?
 \begin{enumerate}
-	\item In the fitting sample, do a full poisson LASSO of $Y$ on $D$ and $X$, but only LASSO over the $X$ terms, to pick which ones count.  Then, in the fitting sample, do a regular poisson regression to get initial estimates for $\beta$ and $\theta$ using the subset of $X$ picked out in LASSO.  For the estimation sample, use $\beta$ to construct $s = X\beta$.
-	\item Compute weights $w = \exp(D\theta + X\beta)$ in the fitting sample, and then.  Compute a linear LASSO of $D$ on $X$ using those weights, and then do weighted OLS, again with those weights, on the selected covariates.  The coefficients of this are $\mu$.
-	\item Finally, the moment is $(Y - \exp(D\theta + s))(D - X\mu)$, and we only evaluate/fit this in the \textbf{hold out sample}.
-	\item If $D$ is univariate, we can just do root-finding.  If $D$ is multivariate, we won't be able to match this exactly, so lets minimize squared deviations from zero.  In the optimization routine, the  
+	\item Make a bunch of splits of the data into training and estimation sets. 
+	\item In a \textbf{training} set $k$, use Poisson LASSO and regular Poisson regression to get initial estimates of $\theta$ and $\beta$ that we'll call $\widetilde{\theta}$ and $\widetilde{\beta}$.
+		\begin{itemize}
+			\item Use the LASSO step to pick the $X$'s that count.
+			\item Use the regular step to estimate $\widetilde{\theta}_k$ and $\widetilde{\beta}_k$ with all of $D$ and the chosen subset of $X$.
+		\end{itemize}
+	\item In the corresponding \textbf{estimation} set $k$, compute $s_k = X \widetilde{\beta}_k$.
+	\item Back in the \textbf{training} set $k$, compute weights $w_k = \exp(D\widetilde{\theta}_k + X\widetilde{\beta}_k)$.  Compute a linear LASSO of $D$ on $X$ using those weights.  Based on the selected covariates there, do weighted OLS, again with those weights, on the selected covariates.  The coefficients of this are $\mu_k$.
+		\begin{itemize}
+			\item Note, the STATA package for this doesn't do weighted OLS in the second step, they do regular OLS.  I guess we want a flag here to possibly mimic STATA.
+		\end{itemize}
+	\item Finally, in the \textbf{estimation} set $K$, construct the moment i$(Y - \exp(D\theta + s))(D - X\mu_k)$.
+	\item Since we'll (probably?) focus on the DML2 algorithm, for each $k$, compute the average of that moment, as a function of $\theta$, and then average over each of those averages to get the final objective function we want.
+		\begin{itemize}
+			\item Note, this is \textbf{also} different from what STATA does.  It seems like they compute this moment in one step using all the data, and ignore the hold out structure.
+		\end{itemize}
+	\item If $D$ is univariate, we can just do root-finding.  If $D$ is multivariate, we won't be able to match this exactly, so lets minimize squared deviations from zero.   
 \end{enumerate}
 \subsection{How would the linear version work?}
-Exactly the same way.  Get rid of the $\exp$'s, and wherever the above says ``Poisson'' replace with ``OLS''.  Moment is now $(Y - D\theta - s)(D - X\mu)$.
+Exactly the same way.  Get rid of the $\exp$'s, and wherever the above says ``Poisson'' replace with ``OLS''.  Moment is now $(Y - D\theta - s)(D - X\mu)$.  I \textbf{think} we ignore the weights in the step where we compute $\mu$?
 \end{document}
