#7 small change in notes

--- a/notes/dml_lasso.tex
+++ b/notes/dml_lasso.tex
@@ -60,7 +60,7 @@ The entries in the Hessian matrix that we need to compute $\mu$ are:
 	J_{\theta \beta}=-E\left[D X^{\prime}\right] \\
   J_{\beta \beta}=-E\left[X X^{\prime}\right]
 \end{gather*}
-yielding this expression for $\mu$:
+yielding this \expression for $\mu$:
 $$	\mu = E\left[D X^{\prime}\right]\left(E\left[X X^{\prime}\right]\right)^{-1}$$
 The Neyman orthogonal score is then given by:
 $$ \psi(W ; \theta, \eta)=\left(Y-D \theta-X^{\prime} \beta\right)(D-\mu X) $$
@@ -101,28 +101,28 @@ These steps give a single point estimate, $\hat{\theta}$ and an associated covar
 \subsection{The Poisson Setting - LASSO Implementation}
 In Poisson regression, the function $l$ is
 \begin{equation*}
-	l(W; \theta, \beta) = Y(D\theta + X\beta) - exp(D\theta + X\beta)
+	l(W; \theta, \beta) = Y(D\theta + X\beta) - \exp(D\theta + X\beta)
 \end{equation*}
 and its associated gradients needed for the definition of $\psi$ are
 \begin{align*}
-	\frac{\partial}{\partial \theta}l(W, \theta, \beta) &= (Y - exp(D\theta + X\beta)) D \\
-	\frac{\partial}{\partial \beta}l(W, \theta, \beta) &= (Y - exp(D\theta + X\beta)) X
+	\frac{\partial}{\partial \theta}l(W, \theta, \beta) &= (Y - \exp(D\theta + X\beta)) D \\
+	\frac{\partial}{\partial \beta}l(W, \theta, \beta) &= (Y - \exp(D\theta + X\beta)) X
 \end{align*}
 The entries in the Hessian matrix that we need to compute $\mu$ are:
 \begin{align*}
-	J_{\theta, \theta} &= -E\left[D'Dexp(D\theta + X\beta)\right] \\
-	J_{\theta, \beta} &= -E\left[D'Xexp(D\theta + X\beta)\right] \\
-	J_{\beta, \beta} &= -E\left[X'Xexp(D\theta + X\beta)\right]
+	J_{\theta, \theta} &= -E\left[D'D\exp(D\theta + X\beta)\right] \\
+	J_{\theta, \beta} &= -E\left[D'X\exp(D\theta + X\beta)\right] \\
+	J_{\beta, \beta} &= -E\left[X'X\exp(D\theta + X\beta)\right]
 \end{align*}
-yielding this expression for $\mu$:
+yielding this \expression for $\mu$:
 \begin{equation*}
-	\mu = E\left[D'Xexp(D\theta + X\beta)\right]\left(E\left[X'Xexp(D\theta + X\beta)\right]\right)^{-1}
+	\mu = E\left[D'X\exp(D\theta + X\beta)\right]\left(E\left[X'X\exp(D\theta + X\beta)\right]\right)^{-1}
 \end{equation*}
-I \textit{think} this constructing is revealing, since it looks like weighted least squares, with $D$ as the outcome, $X$ as the covariates, and weights equal to $exp(D\theta + X\beta)$.
+I \textit{think} this constructing is revealing, since it looks like weighted least squares, with $D$ as the outcome, $X$ as the covariates, and weights equal to $\exp(D\theta + X\beta)$.
 
 The Neyman Orthogonal moment for Poisson regression is then:
 \begin{equation*}
-	\psi = (Y - exp(D\theta + X\beta))(D - X\mu)
+	\psi = (Y - \exp(D\theta + X\beta))(D - X\mu)
 \end{equation*}
 
 \noindent \underline{Implementation}:
@@ -130,7 +130,7 @@ The Neyman Orthogonal moment for Poisson regression is then:
 	\item Make a bunch of splits of the data into training and estimation sets.
 	\item In a \textbf{training} set $k$, use Poisson LASSO of $Y$ on $D$ and $X$ to select the covariates, $\hat{X}_k$ (making sure $D$ is always included). Then fit a Poisson regression of $Y$ on $\hat{X}_k$ and $D$, and let $\hat{\beta}_k$ be the estimated coefficients on $\hat{X}_k$.
 	\item In the corresponding \textbf{estimation} set $k$, compute $s_k = X \hat{\beta}_k$.
-	\item Back in the \textbf{training} set $k$, compute weights $w_k = exp(D\hat{\theta}_k + X\hat{\beta}_k)$ using the results from step 2.  Compute a linear LASSO of $D_j$ on $X$ using those weights to select covariates $\tilde{X}_{k,j}$ for each variable of interest. Fit a linear regression of $D_j$ on $\tilde{X}_{k,j}$, and denote this $\tilde{\mu}_{k,j}$. Collect the $\tilde{\mu}_{k,j}$ into a vector to form $\tilde{\mu}_k$.
+	\item Back in the \textbf{training} set $k$, compute weights $w_k = \exp(D\hat{\theta}_k + X\hat{\beta}_k)$ using the results from step 2.  Compute a linear LASSO of $D_j$ on $X$ using those weights to select covariates $\tilde{X}_{k,j}$ for each variable of interest. Fit a linear regression of $D_j$ on $\tilde{X}_{k,j}$, and denote this $\tilde{\mu}_{k,j}$. Collect the $\tilde{\mu}_{k,j}$ into a vector to form $\tilde{\mu}_k$.
 		\begin{itemize}
 			\item Should we be using weights in the linear regression too?
 		\end{itemize}
@@ -140,19 +140,19 @@ The Neyman Orthogonal moment for Poisson regression is then:
 	\end{gather*}
 	\item Using the DML2 algorithm, for each $k$, construct the average of the moment:
 	$$
-	\frac{1}{n} \sum_{i=1}^{n}\left(D_{i}-m_{i}\right)^{\prime}\left(Y_{i}-exp(s_{i}-D_{i} \theta^{\prime})\right)
+	\frac{1}{n} \sum_{i=1}^{n}\left(D_{i}-m_{i}\right)^{\prime}\left(Y_{i}-\exp(s_{i}-D_{i} \theta^{\prime})\right)
 	$$
 	Then average over each of these folds to get the final objective function, which we use to compute
 	$\hat{\theta}$ by minimizing squared deviations from zero (if $D$ is univariate, we can just do root-finding).
 	\item To get a covariance matrix for this estimate of $\theta$, we first compute $J_0$, defined by:
 	\begin{align*}
 		J_0 &= \frac{\partial}{\partial \theta} E_W \left[\psi(Y,D,X,\widehat{\theta},\widetilde{\theta}, \widetilde{\beta}) \right]\\
-		&= -E_W\left[D'exp(D\widehat{\theta} + s)(D - X\widetilde{\mu}) \right]
+		&= -E_W\left[D'\exp(D\widehat{\theta} + s)(D - X\widetilde{\mu}) \right]
 	\end{align*}
 	Next we compute $\Psi$:
 	\begin{align*}
 		\Psi &= E_W\left[\psi(W, \widehat{\theta},\widetilde{\theta}, \widetilde{\beta})\psi(W, \widehat{\theta},\widetilde{\theta}, \widetilde{\beta})'\right] \\
-			&= E_W\left[(Y - exp(D\widehat{\theta} + s))^2(D - X\widetilde{\mu})(D - X\widetilde{\mu})'\right]
+			&= E_W\left[(Y - \exp(D\widehat{\theta} + s))^2(D - X\widetilde{\mu})(D - X\widetilde{\mu})'\right]
 	\end{align*}
 	In both cases, I think we'd compute each of these as the average over points in the estimation set $k$, and then average over each of the estimation sets within a split structure.\footnote{For an example of this averaging, see the formula for $\widehat{J}_0$ on page C27 of the original DML paper.} We then get:
 	$$\widehat{Var}(\hat{\theta}) = \frac{1}{n} J_0^{-1} \Psi J_0^{-1}$$
@@ -180,7 +180,7 @@ $$\psi\left(W ; \theta, \beta, \partial_{\theta} \beta_{\theta}\right):=\partial
 \subsection{The Linear Setting - LASSO implementation}
 Consider again the function:
 $$\ell(W ; \theta, \beta)=-\frac{(Y-D \theta-\beta(X))^{2}}{2}$$
-Taking FOC, we get:
+Taking FOC with respect to $\beta$, we get:
 \begin{align*}
 	0 = E[Y - D\theta - \beta(X)| X] \\
 	\Rightarrow \beta(X) = E[Y - D\theta |X]
@@ -225,27 +225,27 @@ So we get the following Neyman orthogonal score
 \subsection{The Poisson Setting - LASSO implementation}
 We have only solved the orthogonal score for the case when $D$ is a univariate binary variable. Consider again for the regression case, the function $l$ is
 \begin{equation*}
-	l(W; \theta, \beta) = Y(D\theta + X\beta) - exp(D\theta + \beta(X))
+	l(W; \theta, \beta) = Y(D\theta + X\beta) - \exp(D\theta + \beta(X))
 \end{equation*}
 
 Taking FOC with respect to $\beta$, we get:
 \begin{align*}
-	\beta_\theta(X) &= E[exp(D\theta + \beta(X)) | X] \\
-  &= exp(\beta(X)) E[exp(D\theta)|X] \\
-  &= exp(\beta(x)) \left(Pr(D = 1 | X)exp(\theta) + (1 - Pr(D = 1 | X))\right) \\
-	&= exp(\beta(x)) \left(E[D | X]exp(D\theta) + (1-E[D|X]))\right)
+	\beta_\theta(X) &= E[\exp(D\theta + \beta(X)) | X] \\
+  &= \exp(\beta(X)) E[\exp(D\theta)|X] \\
+  &= \exp(\beta(x)) \left(Pr(D = 1 | X)\exp(\theta) + (1 - Pr(D = 1 | X))\right) \\
+	&= \exp(\beta(x)) \left(E[D | X]\exp(D\theta) + (1-E[D|X]))\right)
 \end{align*}
 Let $s(X) = E[Y|X]$ and $m(X) = E[D|X]$ and rearrange to get:
-$$exp \left(\beta_{\theta}(X)\right)=\frac{s(X)}{exp (\theta) m(X)+1-m(X)}$$
+$$\exp \left(\beta_{\theta}(X)\right)=\frac{s(X)}{\exp (\theta) m(X)+1-m(X)}$$
 
 From this, we have the following:
 \begin{gather*}
-	\beta_\theta(X) = \log\left(\frac{s(X)}{exp (\theta) m(X)+1-m(X)}\right) \\
-  \partial_\theta \beta_\theta = -\frac{m(X)exp(\theta)}{m(X)exp(\theta) + (1-m(x))}
+	\beta_\theta(X) = \log\left(\frac{s(X)}{\exp (\theta) m(X)+1-m(X)}\right) \\
+  \partial_\theta \beta_\theta = -\frac{m(X)\exp(\theta)}{m(X)\exp(\theta) + (1-m(x))}
 \end{gather*}
 
 Putting this altogether and plugging into the score function, we get:
-$$\psi(W ; \theta, s(X), m(X))=\left(Y-\frac{exp (D \theta) s(X)}{exp (\theta) m(X)+1-m(X)}\right)\left(D-\frac{exp (\theta) m(X)}{exp (\theta) m(X)+1-m(X)}\right)$$
+$$\psi(W ; \theta, s(X), m(X))=\left(Y-\frac{\exp (D \theta) s(X)}{\exp (\theta) m(X)+1-m(X)}\right)\left(D-\frac{\exp (\theta) m(X)}{\exp (\theta) m(X)+1-m(X)}\right)$$
 
 \noindent \underline{Implementation}: \\
 Steps 1 - 5 are the same as the previous
@@ -267,7 +267,7 @@ Steps 1 - 5 are the same as the previous
 	\end{align*}
 	So we have
   \begin{align*}
-  	J_0 = E_W\left[ A \times \left(\frac{exp(\theta)m }{P} + \frac{exp(\theta)^2s^2}{P^2}\right) + B \times \left(\frac{Dexp(D\theta)s}{P} + \frac{exp(D\theta)s}{P^2}\right) \right]
+  	J_0 = E_W\left[ A \times \left(\frac{\exp(\theta)m }{P} + \frac{\exp(\theta)^2s^2}{P^2}\right) + B \times \left(\frac{D\exp(D\theta)s}{P} + \frac{\exp(D\theta)s}{P^2}\right) \right]
   \end{align*}
 	As always, we have
 	\begin{gather*}
